# er04

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  models.py  note_generator.py  pyproject.toml  query.py
src/: query.py  rag.py
