[project]
name = "er04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "adr>=0.4.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
use_pre_commit = true